--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
 <nav class="black">
 <div class="container">
-<a href="/stories" class="brand-logo">Dev | Stories</a>
+<a href="/" class="brand-logo">Dev | Stories</a>
 <ul class="right hide-on-small-only">
 {{#if user}}
 <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
