--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,11 @@
 
 <body>
 
+{{#if user}}
+{{> _fixed-btn}}
+{{/if}}
+
+
 {{> _header}}
 
 <main>
@@ -33,11 +38,19 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+
+{{!-- editor --}}
+<script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
+
+
 <script>
+  M.AutoInit();
 $(document).ready(function () {
-  
+
+
 
 });// READY
+
 
 </script>
 </body>
