--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -4,6 +4,8 @@
 <a href="/" class="brand-logo">Dev | Stories</a>
 <ul class="right hide-on-small-only">
 {{#if user}}
+
+<li><a href="/stories"><i class="material-icons">publish</i></a></li>
 <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
 <li><a href="/auth/logout"><i class="material-icons left">exit_to_app</i> Logout</a></li>
 <li><a href="/stories/my"><i class="fa fa-user"></i> My Stories</a></li>
