--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -1,1 +1,37 @@
-<h1>index story</h1>
+<h1>Stories</h1>
+<div class="row">
+{{#each stories}}
+<div class="col s12 m4">
+<div class="card">
+<div class="card-image">
+  <a href="/stories/edit/{{id}}" class="btn-floating halfway-fab red">
+  <i class="material-icons">edit</i>
+  </a>
+</div>
+
+
+<div class="card-content center-align">
+<h5>{{title}}</h5>
+<p class="story-text" style="height: 100px;">{{truncate body 100}}</p>
+<br>
+
+{{!-- <div class="chip">
+<img src="{{stories.image}}">
+{{stories.firstName}} {{stories.lastName}}
+</div> --}}
+</div>
+
+<div class="card-action center-align">
+<a class="btn grey" href="/stories/show/{{id}}">
+Read More
+</a>
+</div>
+
+</div>
+</div>
+{{else}}
+<p>No Stories Listed</p>
+
+{{/each}}
+
+</div>
