--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,1 +1,25 @@
-<h1>show stories</h1>
+<div class="row">
+  <div class="col s12 m8">
+    <h3>{{story.title}}</h3>
+    <div class="card story">
+      <div class="card-content">
+        <span class="card-title">{{formatDate story.date 'MMMM Do YYYY'}}</span>
+        {{ story.body}}
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m4">
+    <div class="card center-align">
+      <div class="card-content">
+        <span class="card-title">
+          {{user.firstName}} {{user.lastName}}
+        </span>
+        <img src="{{user.image}}" class="responsive-img circle">
+      </div>
+       <div class="card-action">
+      <a href="/stories/user/{{user.id}}">More From 
+      {{user.firstName}}</a>
+    </div>
+    </div>
+  </div>
+</div>
