--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -1,5 +1,41 @@
 <h3>
   Welcome {{user.firstName}}
 </h3>
-
+{{#if stories}}
 <p class="flow-text">Your Stories</p>
+<table class="striped">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Date</th>
+      <th>Status</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each stories}}
+    <tr>
+      <td>
+        <a href="/stories/show/{{id}}" class="blue-text"><strong>{{title}}</strong></a>
+        <td>{{formatDate date 'MMMM do YYYY'}}</td>
+        <td><span class="dash-status" style="text-transform: capitalize;">{{status}}</span></td>
+        <td><a href="/stories/edit/{{id}}" class="btn green"><i
+              class="material-icons left">edit</i>Edit</a>
+
+          <form action="/stories/{{id}}?_method=DELETE" method="POST" id="delete-form" style="display: inline;">
+          <input type="hidden" name="_method" value="DELETE">
+            {{!-- delete form - post? - method override --}}
+            <button type="submit" class="btn red"><i class="material-icons left">delete</i>Delete</button>
+          </form>
+
+        </td>
+
+      </td>
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
+{{else}}
+<p class="flow-text">No Stories Whatsoeva</p>
+
+{{/if}}
